# Multimodal_Ninja_Fruit

./: .gitignore  README.md  pyproject.toml  run_game.py  run_hand_test.py
body_movement_detection/: pyproject.toml
body_movement_detection/src/body_movement_detection/: __init__.py  config.py  main.py
body_movement_detection/src/body_movement_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
body_movement_detection/src/body_movement_detection/modules/: __init__.py  hands_detector.py  pose_detector.py
eye_tracking/: eye_tracking_game_mode.py  tracker.py
ninja_fruit.egg-info/: PKG-INFO  SOURCES.txt
src/: base_game_mode.py  constants.py  game.py
src/entities/: __init__.py  entities.py  entities_manager.py
src/eye_tracking/: config.yaml  eye_tracking_game_mode.py  tracker.py
src/handControl/: .gitignore  __init__.py  hands_detector.py  pose_detector.py
src/voskListener/: __init__.py  example.py  vosk_listener.py
