[project]
name = "body_movement_detection"
version = "0.1.0"
description = "Body movement detection using MediaPipe"
dependencies = [
    "mediapipe",
    "opencv-python"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]